--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^34.2.0",
     "@ckeditor/ckeditor5-react": "^5.0.2",
+    "@reduxjs/toolkit": "^1.8.3",
     "bootstrap": "^5.2.0",
     "faunadb": "^4.6.0",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.34.0",
+    "react-redux": "^8.0.2",
     "swr": "^1.3.0"
   },
   "devDependencies": {
