--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^34.2.0",
     "@ckeditor/ckeditor5-react": "^5.0.2",
+    "@fontsource/poppins": "^4.5.9",
     "@reduxjs/toolkit": "^1.8.3",
     "bootstrap": "^5.2.0",
     "faunadb": "^4.6.0",
