--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "faunadb": "^4.6.0",
     "next": "12.2.3",
     "react": "18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.34.0",
     "react-redux": "^8.0.2",
